Fix overflowing content

--- a/src/assets/scss/layout/_sidescroll.scss
+++ b/src/assets/scss/layout/_sidescroll.scss
@@ -3,5 +3,5 @@
   border-radius: 0.25em;
   color: #636363;
   display: grid;
-  grid-template-columns: 30% 1fr;
+  grid-template-columns: 30% 70%;
 }
